[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/utils/squad_formation/squad_formation.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0, 0, 1 )

[node name="squad_formation" type="Spatial"]
script = ExtResource( 1 )

[node name="debug_mesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
software_skinning_transform_normals = false
material/0 = SubResource( 2 )

[node name="disable_squad_input_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="retreat_cooldown" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[connection signal="timeout" from="disable_squad_input_cooldown" to="." method="_on_disable_squad_input_cooldown_timeout"]
